--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: fffForward;
-    src: url("../fonts/FFFFORWA.ttf"); 
+    src: url("../fonts/FFFFORWA.TTF"); 
     font-weight: normal;  
 }
 
