--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -19,6 +19,10 @@
     font-weight: normal;  
 }
 
+#proLang:hover,#otherSkills:hover,#techSkills:hover,#proLangRel:hover{
+    cursor: pointer; 
+}
+
 
 
 /*Bar chart*/
