--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -36,147 +36,34 @@
     margin: 0;
 }
 
-#a_C_Cpp:hover, #a_Csharp:hover,#a_HTML_CSS:hover{
+#a_C_Cpp:hover, #a_Csharp:hover,#a_HTML_CSS:hover,#a_JS_JQ:hover,#a_skills_top{
     cursor: pointer;
 }
 
-/*Bar chart*/
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+  padding: 20px 100px 20px 100px;
+}
 
- /* Bar Chart */
-  #bar-chart {
-    display: block;
-  }
-  .bar-chart {
-    list-style: none;
-    height: 300px;
-    position: relative;
-    padding: 0;
-    margin: 0px;
-    /* Y Axis */
-  
-  }
-  .bar-chart li {
-    display: inline-block;
-    width: 18%;
-    height: 100%;
-    background-color: #CCC;
-    text-align: center;
-    font-weight: bold;
-    color: #FFF;
-    position: relative;
-    font-size: 18px;
-    font-size: 1.8rem;
-    margin: 0 1% 0 0;
-    border: #BBB solid 1px;
-    vertical-align: bottom;
-    border-bottom: #BBB solid 1px;
-    -webkit-box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.6);
-    -moz-box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.6);
-    box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.6);
-  }
-  .bar-chart li:nth-child(6n) {
-    margin-right: 0;
-  }
-  .bar-chart .percent {
-    opacity: 0.3;
-    position: absolute;
-    bottom: 50px;
-    font-size: 45px;
-    font-size: 4.5rem;
-    width: 100%;
-    line-height: 1em;
-  }
-  .bar-chart .percent span {
-    font-size: 24px;
-    font-size: 2.4rem;
-    padding-left: 3px;
-  }
-  .bar-chart .skill {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    font-size: 12px;
-    font-size: 1.2rem;
-  }
-  .bar-chart .p-40 {
-    height: 40%;
-  }
-  .bar-chart .p-75 {
-    height: 75%;
-  }
-  .bar-chart .p-80 {
-    height: 80%;
-  }
-  .bar-chart .p-90 {
-    height: 90%;
-  }
-  .bar-chart .p-95 {
-    height: 95%;
-  }
-  .bar-chart .aqua {
-    border-color: #8dc5be;
-    background-color: #b0dbd6;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #5fb2a8), color-stop(1, #b0dbd6));
-    background-image: -ms-linear-gradient(bottom, #5fb2a8, #b0dbd6);
-  
-    background-image: -moz-linear-gradient(center bottom, #5fb2a8 0%, #b0dbd6 100%);
-    background-image: -o-linear-gradient(bottom, #5fb2a8, #b0dbd6);
-  }
-  .bar-chart .pink {
-    border-color: #ebc0b5;
-    background-color: #f4dcd6;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e1ae9e), color-stop(1, #f4dcd6));
-    background-image: -ms-linear-gradient(bottom, #e1ae9e, #f4dcd6);
-  
-    background-image: -moz-linear-gradient(center bottom, #e1ae9e 0%, #f4dcd6 100%);
-    background-image: -o-linear-gradient(bottom, #e1ae9e, #f4dcd6);
-  }
-  .bar-chart .yellow {
-    border-color: #e7af30;
-    background-color: #efc563;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #dfae36), color-stop(1, #efc563));
-    background-image: -ms-linear-gradient(bottom, #dfae36, #efc563);
-  
-    background-image: -moz-linear-gradient(center bottom, #dfae36 0%, #efc563 100%);
-    background-image: -o-linear-gradient(bottom, #dfae36, #efc563);
-  }
-  .bar-chart .brown {
-    border-color: #dcb386;
-    background-color: #dcba83;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #bc8e5b), color-stop(1, #dcba83));
-    background-image: -ms-linear-gradient(bottom, #bc8e5b, #dcba83);
+@media (max-width: 767px){
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+  padding: 10px 30px 10px 30px;
+}
+}
 
-    background-image: -moz-linear-gradient(center bottom, #bc8e5b 0%, #dcba83 100%);
-    background-image: -o-linear-gradient(bottom, #bc8e5b, #dcba83);
-  }
-  .bar-chart .red {
-    border-color: #e14949;
-    background-color: #da6d6c;
-    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ca4544), color-stop(1, #da6d6c));
-    background-image: -ms-linear-gradient(bottom, #ca4544, #da6d6c);
-  
-    background-image: -moz-linear-gradient(center bottom, #ca4544 0%, #da6d6c 100%);
-    background-image: -o-linear-gradient(bottom, #ca4544, #da6d6c);
-  }
-  .bar-chart li.axis {
-    width: 8%;
-    border: 0;
-    border-right: #DDD solid 1px;
-    height: 450px;
-    background: url(images/bg-grey.png) repeat;
-    -webkit-box-shadow: inset 0 0 0 0 #ffffff;
-    -moz-box-shadow: inset 0 0 0 0 #ffffff;
-    box-shadow: inset 0 0 0 0 #ffffff;
-  }
-  .bar-chart .label {
-    color: #888888;
-    margin: -0.6em 0 88px 0;
-    font-size: 12px;
-    font-size: 1.2rem;
-    font-weight: normal;
-  }
+.container-blue{
+    background-color: #337ab7;
+    color: white;
+}
 
-/*Bar chart end*/
+.container-gray{
+    background-color: #888;
+    color: white;
+}
+
 
 
 /* Bootstrap CSS*/
