--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -27,6 +27,11 @@
     text-align: center;
 }
 
+.myglyph{
+  font-size: 1.3em;
+  padding-right: 5px;
+}
+
 .hr_gray{
     border: 1px solid #cccccc;
     margin: 0;
@@ -3939,7 +3944,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 15px 10px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
