007 CSS and Nav
Fixed nav and modified CSS

--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -56,17 +56,28 @@ text-align: center;
   padding: 20px 100px 20px 100px;
 }
 
-@media (max-width: 767px){
+@media (max-width: 800px){
 .container-full {
   margin: 0 auto;
   width: 100%;
   padding: 10px 30px 10px 30px;
 }
+
+.navbar-brand {
+padding-left: 15px;
 }
+
+}
+
+
 
 .container-blue{
     background-color: #337ab7;
     color: white;
+}
+
+.container-blue h1{
+text-align: center;
 }
 
 .container-gray{
@@ -2500,7 +2511,7 @@ table th[class*="col-"] {
   min-height: .01%;
   overflow-x: auto;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 800px) {
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
@@ -4292,7 +4303,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-bottom: 10px;
   line-height: 20px;
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
@@ -4389,7 +4400,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     top: 0;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
   }
@@ -4511,7 +4522,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555;
   background-color: #e7e7e7;
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
   }
@@ -4616,7 +4627,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #fff;
   background-color: #080808;
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #080808;
   }
@@ -6468,7 +6479,7 @@ button.close {
 .visible-lg-inline-block {
   display: none !important;
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .visible-xs {
     display: block !important;
   }
@@ -6483,17 +6494,17 @@ button.close {
     display: table-cell !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .visible-xs-block {
     display: block !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .visible-xs-inline {
     display: inline !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .visible-xs-inline-block {
     display: inline-block !important;
   }
@@ -6588,7 +6599,7 @@ button.close {
     display: inline-block !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 800px) {
   .hidden-xs {
     display: none !important;
   }
