--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -83,7 +83,7 @@ text-shadow: 3px 3px #555;
 } 
 
 .container-blue h2{
-text-shadow: 3px 3px #06589f;
+text-shadow: 3px 3px #06589f; /*Sjena za plavu*/
 } 
 
 .container-gray{
