034 Updated CSS and some "secret stuff"

--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -86,7 +86,10 @@
 
 .expDate, .eduDate {
     width: 23%;
+    font-size: 0.85em;
+    text-align: right;
 }
+
 
 .eduTable, .expTable {
     width: 97%;
