--- a/bootstrap-3.3.2-dist/css/bootstrap.css
+++ b/bootstrap-3.3.2-dist/css/bootstrap.css
@@ -126,7 +126,7 @@
     margin: 0;
 }
 
-#a_C_Cpp:hover, #a_Csharp:hover, #a_HTML_CSS:hover, #a_JS_JQ:hover, #a_skills_top, #a_PHP_lang:hover, #a_MySQL_DB:hover, #a_Matlab:hover, #a_ASP_MVC:hover, #a_frontend:hover, #a_backend:hover, .a_programming_related:hover, .a_technical_skills:hover, #a_omnivision:hover, #a_hexagonal:hover, .a_computerVision:hover, #a_imageToASCII:hover, #a_blockRunnerRampage:hover, #a_foodlyApp:hover, #a_foodlyWeb, #a_easyLearn:hover, #a_codeAdrianWeb:hover, #a_kernelFlter:hover, .a_roboticsProjects:hover, #a_histogram:hover, #a_projects_top:hover {
+#a_C_Cpp:hover, #a_Csharp:hover, #a_HTML_CSS:hover, #a_JS_JQ:hover, #a_skills_top, #a_PHP_lang:hover, #a_MySQL_DB:hover, #a_Matlab:hover, #a_ASP_MVC:hover, #a_frontend:hover, #a_backend:hover, #a_magento:hover, .a_programming_related:hover, .a_technical_skills:hover, #a_omnivision:hover, #a_hexagonal:hover, .a_computerVision:hover, #a_imageToASCII:hover, #a_blockRunnerRampage:hover, #a_foodlyApp:hover, #a_foodlyWeb, #a_easyLearn:hover, #a_codeAdrianWeb:hover, #a_kernelFlter:hover, .a_roboticsProjects:hover, #a_histogram:hover, #a_projects_top:hover {
     cursor: pointer;
 }
 
