--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,7 @@
 @import "components/tables";
 @import "components/header";
 @import "components/buttons";
+@import "components/timeline";
 
 /*------------------------------------------------------------*\
                       LAYOUT INCLUDES
@@ -61,3 +62,4 @@
 
 @import "sections/skills";
 @import "sections/hero-image";
+@import "sections/projects";
