--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -1,4 +1,5 @@
 .container-skills {
+    @include ms-respond(padding-bottom, 1);
     li {
         padding: 0.5em;
 
@@ -16,15 +17,21 @@
     }
 }
 
-.skills-logos {
-    @include ms-respond(padding-bottom, 0);
-}
-
 .skills-list {
     @include ms-respond(padding-bottom, 2);
     li {
-       // width: 49%;
-        //display: inline-block;
+        display: inline-block;
         padding: 0;
+
+        &:not(:last-child){
+            &::after{
+                content:",";
+                padding-right: 0.1em;
+            }
+        }
+
+        &:last-child::after{
+            content:".";
+        }
     }
 }
