--- a/scss/components/_timeline.scss
+++ b/scss/components/_timeline.scss
@@ -50,8 +50,8 @@
 	margin-left: 60px;
 	background: white;
 	border-radius: 0.25em;
-	padding: 1em;
-	box-shadow: 0 3px 0 #d7e4ed;
+	padding: 1em 1em 0;
+	box-shadow: .1em .1em 0 .05em #d7e4ed;
 }
 .cd-timeline-content:after {
 	content: "";
