--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,7 @@
 @import "components/page";
 @import "components/tables";
 @import "components/header";
+@import "components/footer";
 @import "components/buttons";
 @import "components/timeline";
 
