--- a/scss/sections/_projects.scss
+++ b/scss/sections/_projects.scss
@@ -1,6 +1,6 @@
 .container-projects {
     ul {
-         @include clearfix();
+        @include clearfix();
         max-width: px-to-rem(map_get($breakpoints, desktop-medium));
         margin: 0 auto;
     }
@@ -8,7 +8,19 @@
     li {
         color: $color-variation;
         position: relative;
-        @include ms-respond(padding-bottom, 6);
+        @include ms-respond(margin-bottom, 6);
+
+        &:hover {
+            &:after {
+                background-color: lighten($background-variation, 8%);
+            }
+        }
+
+        &:active {
+            &:after {
+                background-color: lighten($background-variation, 15%);
+            }
+        }
 
 
         @include breakpoint-min(tablet-portrait){
@@ -46,17 +58,21 @@
 
         &:after {
             content: "";
-            background: $background-variation;
+            background-color: $background-variation;
             position: absolute;
             top: 0;
             left: 0;
             right: 0;
-            bottom: 37%;
+            bottom: 35%;
             z-index: 0;
+            transition: background-color 0.3s ease;
         }
 
         .description {
             display: none;
+            @include ms-respond(padding-top, 1);
+            margin: 0 auto;
+            max-width: px-to-em(420px, $base-font-size);
         }
     }
 
